; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_check_roundtrip.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_check_roundtrip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@check_roundtrip_encoding = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @check_roundtrip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_roundtrip(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** @check_roundtrip_encoding, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i8* @strcasestr(i8* %7, i8* %8)
  store i8* %9, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %74

13:                                               ; preds = %1
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @strlen(i8* %15)
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8, i8* %14, i64 %17
  store i8* %18, i8** %5, align 8
  %19 = load i8*, i8** @check_roundtrip_encoding, align 8
  %20 = call i32 @strlen(i8* %19)
  store i32 %20, i32* %6, align 4
  %21 = load i8*, i8** %4, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %71

23:                                               ; preds = %13
  %24 = load i8*, i8** %4, align 8
  %25 = load i8*, i8** @check_roundtrip_encoding, align 8
  %26 = icmp eq i8* %24, %25
  br i1 %26, label %39, label %27

27:                                               ; preds = %23
  %28 = load i8*, i8** %4, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 -1
  %30 = load i8, i8* %29, align 1
  %31 = call i64 @isspace(i8 signext %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %39, label %33

33:                                               ; preds = %27
  %34 = load i8*, i8** %4, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 -1
  %36 = load i8, i8* %35, align 1
  %37 = sext i8 %36 to i32
  %38 = icmp eq i32 %37, 44
  br i1 %38, label %39, label %71

39:                                               ; preds = %33, %27, %23
  %40 = load i8*, i8** %5, align 8
  %41 = load i8*, i8** @check_roundtrip_encoding, align 8
  %42 = load i32, i32* %6, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i8, i8* %41, i64 %43
  %45 = icmp eq i8* %40, %44
  br i1 %45, label %69, label %46

46:                                               ; preds = %39
  %47 = load i8*, i8** %5, align 8
  %48 = load i8*, i8** @check_roundtrip_encoding, align 8
  %49 = load i32, i32* %6, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i8, i8* %48, i64 %50
  %52 = icmp ult i8* %47, %51
  br i1 %52, label %53, label %67

53:                                               ; preds = %46
  %54 = load i8*, i8** %5, align 8
  %55 = getelementptr inbounds i8, i8* %54, i64 0
  %56 = load i8, i8* %55, align 1
  %57 = call i64 @isspace(i8 signext %56)
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %65, label %59

59:                                               ; preds = %53
  %60 = load i8*, i8** %5, align 8
  %61 = getelementptr inbounds i8, i8* %60, i64 0
  %62 = load i8, i8* %61, align 1
  %63 = sext i8 %62 to i32
  %64 = icmp eq i32 %63, 44
  br label %65

65:                                               ; preds = %59, %53
  %66 = phi i1 [ true, %53 ], [ %64, %59 ]
  br label %67

67:                                               ; preds = %65, %46
  %68 = phi i1 [ false, %46 ], [ %66, %65 ]
  br label %69

69:                                               ; preds = %67, %39
  %70 = phi i1 [ true, %39 ], [ %68, %67 ]
  br label %71

71:                                               ; preds = %69, %33, %13
  %72 = phi i1 [ false, %33 ], [ false, %13 ], [ %70, %69 ]
  %73 = zext i1 %72 to i32
  store i32 %73, i32* %2, align 4
  br label %74

74:                                               ; preds = %71, %12
  %75 = load i32, i32* %2, align 4
  ret i32 %75
}

declare dso_local i8* @strcasestr(i8*, i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @isspace(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
